--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ body {
     position: relative;
 }
 
+.grouped-img > svg {
+    position: absolute;
+    top: 45%;
+    left: 5%;
+}
+
 .ice-cream {
     width: 100%; 
     position: relative; 
@@ -139,6 +145,38 @@ body {
     top: 17%; 
     left: -20%; 
     z-index: 1; 
+}
+
+.info{
+    width: 100%;
+}
+
+.info-content {
+    display: flex;
+    text-align: center;
+    margin: 100px 0 100px 0;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.info-item{
+   width: 20%; 
+}
+
+.info-title{
+    font-size: 20px;
+    font-family: "HindMadurai-SemiBold";
+}
+
+.info-text {
+    font-family: "HindMadurai-Regular";
+    width: 100%;
+    color: rgba(21, 1, 1, 0.6);
+    font-size: 14px;
+}
+
+.img-info {
+    margin-bottom: 23px;
 }
 
 
